test_suite/tests/ui/common/invalid_constant.stderr
error[E0080]: evaluation of constant value failed
  --> tests/ui/common/invalid_constant.rs:12:15
   |
12 |     Err(_) => panic!("Invalid Celsius value"),
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: Invalid Celsius value
